--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
     <html lang="de">
+
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title> GIBI Roboter</title>
+        </head>
+
         <style>
             * {
                 margin: 0;
@@ -102,9 +109,9 @@
             }
 
             .button-stop {
-               width: 9em;
-                height: 3em;
-                border-radius: 30em;
+               width: 9rem;
+                height: 3rem;
+                border-radius: 30rem;
                 font-size: 15px;
                 border: none;
                 position: relative;
@@ -152,14 +159,13 @@
                 50% { opacity: 0.5; }
             }
 
-            /* Responsive / Mobile tweaks */
-            @media (max-width: 600px) {
+             @media (max-width: 600px) {
                 .navigation {
                     padding: 10px 14px;
-                    margin-bottom: 14px;
+                    margin-bottom: 70px;
                 }
                 .navigation h1 {
-                    font-size: 1rem;
+                    font-size: 1.5rem;
                 }
                 .navigation ul {
                     gap: 12px;
@@ -177,22 +183,21 @@
                 .video-container { border-radius: 10px; }
                 .video-container img { width: 100%; height: auto; }
                 .button-stop {
-                    width: 100%;
-                    height: 3.6rem;
-                    font-size: 1rem;
-                    border-radius: 999px;
+                    width: 8rem;
+                    height: 2.5rem;
+                    font-size: 0.9rem;
+                    border-radius: 30rem;
                 }
                 .status { font-size: 0.85rem; }
+            }
+            @viewport {
+                width: device-width;
+                zoom: 1.0;
             }
 
         </style>
 
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> GIBI Roboter</title>
-    </head>
 
     <body>
         
