--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
                     height: 2.5rem;
                     font-size: 0.9rem;
                     border-radius: 30rem;
+                    color: #000;
                 }
                 .status { font-size: 0.85rem; }
             }
